--- a/index.html
+++ b/index.html
@@ -8,14 +8,25 @@
     
 </head>
 <body>
-    <nav></nav>
+    <nav><h1>So'rovnoma</h1>
+    </nav>
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+        <div class="pustoy"></div>
+        <section>
+            <div class="left"></div>
+            <div class="right"></div>
+    </section>
+      
     </main>
-    <footer></footer>
+    <footer>
+        <li>
+            <a href="">About</a>
+            <a href="">Home</a>
+            <a href="">Section</a>
+            <a href="">Use</a>
+            <button>Sign In</button>
+        </li>
+    </footer>
     <script src="./script.js">
     </script>
 </body>
